# c

./: .gitignore
aes_key_mng/: aes_private.c  aes_public.h
aes_test/tiny_aes_dll/include/: aes_256_ctr.h
aes_test/tiny_aes_dll/src/: aes.cpp  aes_256_ctr.cpp
benchmark/: .gitignore  CMakeLists.txt  cmake_command.md
benchmark/aes_ni/: test.c  test.txt
benchmark/benchmark/: Ttable_aes.csv  test.c  tiny_aes.csv
benchmark/tiny_aes_dll/: Makefile
benchmark/tiny_aes_dll/include/: aes.h
benchmark/tiny_aes_dll/src/: aes_256_ctr.c
benchmark/ttable_aes_dll/: LICENSE  LICENSE_LIBRESSL.txt  LICENSE_OPENSSL.txt  Makefile  readme.md
benchmark/ttable_aes_dll/src/: aes_256_ctr.c
cmake_test/: .gitignore  CMakeLists.txt  readme.md  vitis_toolchain.cmake
cmake_test/hello/: CMakeLists.txt
cmake_test/hello/src/: hello.c  main_use_dll_load.c  main_use_dll_static.c
cmake_test/libhello/: CMakeLists.txt
cmake_test/libhello/include/: libhello.h
cmake_test/libhello/src/: libhello.c
cpu_arch/: bit_shift.c
makefile_test/: .gitignore
sqlite3/: sample.c
sqlite3/ai_memo/: memo.md
sqlite3/sqlite_export/: CMakeLists.txt  README.md
sqlite3/sqlite_export/include/: sqlite_export.h
sqlite3/sqlite_export/src/: cli_main.c  common.c  common.h  dll_main.c
sqlite3/sqlite_export/tests/: test_build_sql.c  test_main.c
sqlite3/sqlite_export/tests/python/: test_dll,py
sqlite3/test_data/: init.sql  insert.sql  memo.md  select.sql
